gcc/testsuite/rust/rustc/ui/inference/need_type_info/issue-113264-incorrect-impl-trait-in-path-suggestion_dg.rs
trait T {}

struct S {}

impl S {
    fn owo(&self, _: Option<&impl T>) {}
}

fn main() {
    (S {}).owo(None)
// { dg-error ".E0283." "" { target *-*-* } .-1 }
}

